movie details page 99% done

--- a/client/admin/transaction/search.html
+++ b/client/admin/transaction/search.html
@@ -31,7 +31,7 @@
                     <div class="mt-1">
                         <div class="input-group mb-1">
                             <span class="btn btn-white border border-dark text-center">Administrator</span>
-                            <button onclick="logoutAdmin()"a type="submit" class="btn btn-white border border-dark">Logout</button>
+                            <button onclick="logoutAdmin()" type="submit" class="btn btn-white border border-dark">Logout</button>
                         </div>
                     </div>
                 </div>
