--- a/client/admin/auth/login.html
+++ b/client/admin/auth/login.html
@@ -19,7 +19,7 @@
 		   <!-- <div class="col-4 mx-5 rounded-3 h-100 border border-dark bg-light bg-gradient"> -->
                     <div class="container-fluid py-5">
                         <h5 class="text-center">Online Cinema<br>Administrator Panel</h5>
-						<form action="#" onsubmit="loginAdmin()">
+						<form action="javascript:void(0)" onsubmit="loginAdmin()">
 							<div class="row justify-content-center">
 								<div class="col-12 my-2">
 									<label class="control-label">Username</label>
