--- a/client/user/auth/login.html
+++ b/client/user/auth/login.html
@@ -66,7 +66,7 @@
                 <div class="col-4 m-5 rounded-3 h-100 border border-dark">
 		   <!-- <div class="col-4 m-5 rounded-3 h-100 border border-dark bg-light bg-gradient"> -->
                     <div class="container-fluid py-5">
-                        <form action="#" onsubmit="loginUser()">
+                        <form action="javascript:void(0)" onsubmit="loginUser()">
 							<div class="row justify-content-center">
 								<div class="col-12 my-2">
 									<label class="control-label">Username</label>
@@ -94,6 +94,6 @@
         </div>   
 
 	<script src="login.js"></script>
-  <script src="/app/search.js"></script>
+    <script src="/app/search.js"></script>
 </body>
 </html>
