--- a/client/user/auth/register.html
+++ b/client/user/auth/register.html
@@ -66,7 +66,7 @@
                 <div class="col-4 m-4 rounded-3 h-100 border border-dark">
            <!-- <div class="col-4 m-4 rounded-3 h-100 border border-dark bg-light bg-gradient"> -->
                     <div class="container-fluid px-3 py-3">
-                        <form class="align-items-center" action="#" onsubmit="registerUser()">
+                        <form class="align-items-center" action="javascript:void(0)" onsubmit="registerUser()">
                             <div class="row justify-content-center">
                                 <div class="col-12 my-2">
                                     <label class="control-label">Username</label>
