--- a/client/user/transaction/index.html
+++ b/client/user/transaction/index.html
@@ -43,9 +43,10 @@
     </nav>
     <div class="container body-content pt-5">
 
-        <div class="row mt-5 mb-5" id="movieDetails">
+        <div class="row mt-5 mb-5">
             <div class="offset-1 col-md-3 text-center">
-                <img class="w-100" src="file://C:/Users/piete/Pictures/parasite-poster.jpg" />
+                <img id="poster" class="w-100" src="" />
+                <!-- file://C:/Users/piete/Pictures/parasite-poster.jpg -->
             </div>
             <div class="col-md-6 px-5 mb-0">
                 <p class="fs-4 mb-1"><b>Purchase Details</b></p>
@@ -55,12 +56,18 @@
                         <div class="row mb-2 g-0">
                             <div class="col-4"><span class="fs-5 mb-2"><b>Movie Title</b></span></div>
                             <div class="col-1 px-0"><span class="fs-5 mb-2">:</span></div>
-                            <div class="col-7"><span class="fs-5 mb-2">Thor: Love and Thunder</span></div>
+                            <div class="col-7"><span id="title" class="fs-5 mb-2"></span></div>
+                            <!-- Thor: Love and Thunder -->
                         </div>
                         <div class="row mb-2 g-0">
                             <div class="col-4"><span class="fs-5 mb-2"><b>Movie Price</b></span></div>
                             <div class="col-1 px-0"><span class="fs-5 mb-2">:</span></div>
-                            <div class="col-7"><span class="fs-5 mb-2">Rp 15,000</span></div>
+                            <div class="col-7">
+                                <span class="fs-5 mb-2">
+                                    Rp <span id="price"></span>
+                                    <!-- 15,000 -->
+                                </span>
+                            </div>
                         </div>
                         <div class="row mt-4 mb-2 g-0">
                             <div class="col-12">
@@ -80,35 +87,37 @@
         <div class="modal fade" id="qrModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Waiting for payment</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-12 text-center">
-                                <h5 class="fw-bold">Scan the QR code below</h5>
-                                <img src="file:///C:/Users/piete/Downloads/qr-code.png" class="" style="width: 70%">
-                                <div class="">Accepting payment through these applications below</div>
-                                <img src="https://bioskoponline.com/dummy/e-wallet-payment.svg" class="my-2" style="width: 85%">
-                                <div class="">And other merchants that accept QRIS payments</div>
-                                <div class="row mx-2">
-                                    <button class="btn btn-white border border-dark my-3" type="submit"><h5 class="fs-5 fw-normal my-2">I have made the payment</h5></button>
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Waiting for payment</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-12 text-center">
+                                    <h5 class="fw-bold">Scan the QR code below</h5>
+                                    <img src="/resources/img/qr-code.png" class="" style="width: 70%">
+                                    <!-- file:///C:/Users/piete/Documents/Projects/cpp401/client/resources/img/qr-code.png -->
+                                    <div class="">Accepting payment through these applications below</div>
+                                    <img src="https://bioskoponline.com/dummy/e-wallet-payment.svg" class="my-2" style="width: 85%">
+                                    <div class="">And other merchants that accept QRIS payments</div>
+                                    <div class="row mx-2">
+                                        <button class="btn btn-white border border-dark my-3" type="button" onclick="addTransaction()">
+                                            <h5 class="fs-5 fw-normal my-2">I have made the payment</h5>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                </div>
             </div>
         </div>
-
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/resources/js/logout.js"></script>
     <script src="/resources/js/script.js"></script>
-    <script src=""></script>
+    <script src="transaction.js"></script>
 </body>
 </html>
