--- a/client/admin/movie/edit.html
+++ b/client/admin/movie/edit.html
@@ -47,7 +47,7 @@
 
         <hr />
 
-		<form id="editForm" action="javascript:void(0)" onsubmit="editMovie()">
+		<form id="editForm" enctype="multipart/form-data" action="javascript:void(0)" onsubmit="editMovie()">
             <div class="row justify-content-center">
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Title</label>
@@ -55,8 +55,7 @@
                 </div>
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Poster</label>
-                    <input id="poster" class="form-control border border-dark" required>
-                    <!-- <input id="poster" class="form-control border border-dark" type="file" required> -->
+                    <input id="poster" type="file" class="form-control border border-dark" required>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -76,7 +75,7 @@
                 </div>
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Movie</label>
-                    <input id="movie" class="form-control border border-dark" required>
+                    <input id="movie" type="file" class="form-control border border-dark" required>
                 </div>
             </div>
             <div class="row justify-content-center">
