--- a/client/user/user/watch.html
+++ b/client/user/user/watch.html
@@ -41,50 +41,25 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content pt-5">
+    <div class="container body-content pt-4-half">
 
         <div class="px-5">
-            <p class="pt-3"><h1>Login to Online Cinema</h1></p>
+            <p class="pt-3"><h1 id="title">Thor: Love and Thunder</h1></p>
         </div>
 
         <hr />
+        
+        <div class="row mt-4 mb-5 d-flex justify-content-center" id="movieDetails">
+			<div class="col-auto">
+				<video id="videoPlayer" type="video/mp4" src="" style="height: 30rem" controls controlsList="nodownload"></video>
+			</div>
+        </div>
 
-        <div class="container px-5">
-            <div class="row justify-content-center" style="height: 360px;">
-                <div class="col-4 m-5 rounded-3 h-100 border border-dark">
-		   <!-- <div class="col-4 m-5 rounded-3 h-100 border border-dark bg-light bg-gradient"> -->
-                    <div class="container-fluid py-5">
-                        <form action="javascript:void(0)" onsubmit="loginUser()">
-							<div class="row justify-content-center">
-								<div class="col-12 my-2">
-									<label class="control-label">Username</label>
-									<input id="username" class="form-control border border-dark" required>
-								</div>
-							</div>
-							<div class="row justify-content-center">
-								<div class="col-12 my-2">
-									<label class="control-label">Password</label>
-									<input id="password" class="form-control border border-dark" type="password" required>
-								</div>
-							</div>
-							<div class="row justify-content-center">
-								<div class="col-12 my-2">
-									<a class="text-muted text-decoration-none" style="cursor: pointer" onclick="">Forgot password?</a>
-								</div>
-							</div>
-							<div class="row justify-content-center my-2">
-								<button class="col-4 btn btn-white border border-dark" type="submit">Login</button>
-							</div>
-						</form>
-                    </div>
-                </div>
-            </div>
-        </div>   
+    </div>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/resources/js/logout.js"></script>
     <script src="/resources/js/script.js"></script>
-    <script src="login.js"></script>
-    <script src="/app/search.js"></script>
+    <script src="watch.js"></script>
 </body>
 </html>
