--- a/client/admin/movie/edit.html
+++ b/client/admin/movie/edit.html
@@ -95,7 +95,9 @@
 
     </div>
 
-    <script src="edit.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="/resources/js/script.js"></script>
     <script src="/resources/js/logout.js"></script>
+    <script src="edit.js"></script>
 </body>
 </html>
