--- a/client/admin/movie/add.html
+++ b/client/admin/movie/add.html
@@ -47,7 +47,7 @@
 
         <hr />
 
-		<form action="javascript:void(0)" onsubmit="addMovie()">
+		<form id="addForm" action="javascript:void(0)" onsubmit="addMovie()">
             <div class="row justify-content-center">
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Title</label>
@@ -55,8 +55,7 @@
                 </div>
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Poster</label>
-                    <input id="poster" class="form-control border border-dark" required>
-                    <!-- <input id="poster" class="form-control border border-dark" type="file" required> -->
+                    <input id="poster" class="form-control border border-dark" type="file" >
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -76,7 +75,7 @@
                 </div>
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Movie</label>
-                    <input id="movie" class="form-control border border-dark" required>
+                    <input id="movie" class="form-control border border-dark" type="file" >
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -96,7 +95,9 @@
 
     </div>
 
-    <script src="add.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="/resources/js/script.js"></script>
     <script src="/resources/js/logout.js"></script>
+    <script src="add.js"></script>
 </body>
 </html>
