--- a/client/admin/movie/add.html
+++ b/client/admin/movie/add.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Poster</label>
-                    <input id="poster" class="form-control border border-dark" type="file" >
+                    <input id="poster" class="form-control border border-dark" type="file" accept="image/jpeg">
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Movie</label>
-                    <input id="movie" class="form-control border border-dark" type="file" >
+                    <input id="movie" class="form-control border border-dark" type="file" accept="video/mp4">
                 </div>
             </div>
             <div class="row justify-content-center">
