--- a/client/admin/movie/edit.html
+++ b/client/admin/movie/edit.html
@@ -54,7 +54,7 @@
                     <input id="title" class="form-control border border-dark" required>
                 </div>
                 <div class="col-3 mx-5 my-2">
-                    <label class="control-label">Poster</label>
+                    <label class="control-label">Poster <span><!--      EXISTING: POSTER-FILE.JPG      --></span></label>
                     <input id="poster" type="file" class="form-control border border-dark" accept="image/jpeg">
                 </div>
             </div>
@@ -83,12 +83,11 @@
                     <label class="control-label">Price (Rp)</label>
                     <input id="price" class="form-control border border-dark" type="number" min="0" required>
                 </div>
-                <div class="col-3 mx-5 my-2">
-                </div>
+                <div class="col-3 mx-5 my-2"></div>
             </div>
 
             <div class="row justify-content-center mt-5">
-                <button class="col-1 btn btn-white border border-dark mx-3" onclick="location.href='/admin/movie/index.html'">Back</button>
+                <button class="col-1 btn btn-white border border-dark mx-3" type="button" onclick="location.href='/admin/movie/index.html'">Back</button>
                 <button class="col-1 btn btn-white border border-dark mx-3" type="submit">Save</button>
             </div>
 		</form>
