--- a/client/admin/auth/login.html
+++ b/client/admin/auth/login.html
@@ -15,8 +15,7 @@
 
         <div class="container px-5">
             <div class="row justify-content-center" style="height: 400px;">
-                <div class="col-4 mx-5 rounded-3 h-100 border border-dark">
-		   <!-- <div class="col-4 mx-5 rounded-3 h-100 border border-dark bg-light bg-gradient"> -->
+                <div class="col-4 mx-5 rounded-3 h-100 border border-dark" style="background-color: rgba(184, 190, 191, 1)">
                     <div class="container-fluid py-5">
                         <h5 class="text-center">Online Cinema<br>Administrator Panel</h5>
 						<form action="javascript:void(0)" onsubmit="loginAdmin()">
@@ -32,11 +31,9 @@
 									<input id="password" class="form-control border border-dark" type="password" required>
 								</div>
 							</div>
-
 							<div class="row justify-content-center my-4">
-								<button class="col-4 btn btn-white border border-dark" type="submit">Login</button>
+								<button class="col-4 btn btn-white border border-dark theme" type="submit">Login</button>
 							</div>
-							
 						</form>
                     </div>
                 </div>
