--- a/client/user/transaction/index.html
+++ b/client/user/transaction/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/resources/css/style.css">
 </head> 
 <body>
-    <nav class="navbar navbar-light bg-white fixed-top navbar-expand-md border border-dark">
+    <nav class="navbar navbar-light theme-navbar fixed-top navbar-expand-md border border-dark">
         <div class="container-fluid">
 			<a class="navbar-brand" href="/app/index.html">Online Cinema</a>
 
@@ -21,19 +21,15 @@
             <div class="d-md-flex justify-content-md-end">
                 <div class="collapse navbar-collapse" id="navbarContent">
                     <div class="navbar-nav me-1 mb-lg-0">
-                        <a class="nav-item mx-2 my-1" href="/app/index.html">
-                            <span class="btn btn-white border border-dark">Home</span>
-                        </a>
-                        <a id="registerButton" class="nav-item mx-2 my-1" href="/auth/register.html">
-							<span class="btn btn-white border border-dark">Register</span>
-                        </a>
-                        <a id="loginButton" class="nav-item mx-2 my-1" href="/auth/login.html">
-							<span class="btn btn-white border border-dark">Login</span>
-                        </a>
-                        <form class="ms-2 mt-1" action="javascript:void(0)" onsubmit="search()">
+                        <button class="btn btn-white border border-dark bg-white mx-2" onclick="location.href='/app/index.html'">Home</button>
+                        <button id="registerButton" class="btn btn-white border border-dark bg-white mx-2" onclick="location.href='/auth/register.html'">Register</button>
+                        <button id="loginButton" class="btn btn-white border border-dark bg-white mx-2" onclick="location.href='/auth/login.html'">Login</button>
+                    </div>
+                    <div class="mt-1 ms-2">
+                        <form class="" action="javascript:void(0)" onsubmit="search()">
                             <div class="input-group mb-1">
                                 <input id="searchKeyword" class="form-control border border-dark" required>
-                                <button type="submit" class="btn btn-white border border-dark">Search</button>
+                                <button type="submit" class="btn btn-white theme border border-dark">Search</button>
                             </div>
                         </form>
                     </div>
@@ -64,7 +60,7 @@
                             <div class="col-1 px-0"><span class="fs-5 mb-2">:</span></div>
                             <div class="col-7">
                                 <span class="fs-5 mb-2">
-                                    Rp <span id="price"></span>
+                                    <span id="price"></span>
                                     <!-- 15,000 -->
                                 </span>
                             </div>
@@ -80,14 +76,14 @@
                     </div>
                 </div>
                 <div class="row justify-content-center mt-4">
-                    <button class="col-3 btn btn-white border border-dark mt-5" type="button" data-bs-toggle="modal" data-bs-target="#qrModal">Purchase</button>
+                    <button class="col-3 btn btn-white theme border border-dark mt-5" type="button" data-bs-toggle="modal" data-bs-target="#qrModal">Purchase</button>
                 </div>
             </div>
         </div>
         <div class="modal fade" id="qrModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header theme">
                         <h5 class="modal-title" id="exampleModalLabel">Waiting for payment</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
@@ -102,7 +98,7 @@
                                     <img src="https://bioskoponline.com/dummy/e-wallet-payment.svg" class="my-2" style="width: 85%">
                                     <div class="">And other merchants that accept QRIS payments</div>
                                     <div class="row mx-2">
-                                        <button class="btn btn-white border border-dark my-3" type="button" onclick="addTransaction()">
+                                        <button class="btn btn-white  theme my-3" type="button" onclick="addTransaction()">
                                             <h5 class="fs-5 fw-normal my-2">I have made the payment</h5>
                                         </button>
                                     </div>
